# advent-of-code-2024

./: pyproject.toml
day_1/: __init__.py
days/: __init__.py
days/day_1/: solution.py
days/day_2/: solution.py
days/day_2/tests/: test_report_is_safe.py
days/day_4/: README.txt
src/advent_of_code_2024/: __init__.py  constants.py  day_1.py  day_2.py  day_3.py  day_4.py
tests/: test_day_2.py
