[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
]

[project.scripts]
day-1 = "day_1:solve"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D103", "D104", "INP001", "T201"]

[tool.uv]
package = true
